--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "remark-math": "^5.1.0",
     "remark-slug": "^7.0.1",
     "swr": "^1.3.0",
+    "tailwind-variants": "^0.2.0",
     "unist-util-visit": "^4.1.0",
     "use-delayed-render": "^0.0.7"
   },
